LDEV-3914 Fix progress bar broken layout for long lesson names

--- a/lams_central/web/css/_learner_base.scss
+++ b/lams_central/web/css/_learner_base.scss
@@ -720,6 +720,10 @@ nav.sidebar p.no-portrait{
 	padding-right: 35px;
 }
 
+#bs-sidebar-navbar-collapse-1 .lessonName {
+	word-break: break-word;
+}
+
 /* .....NavBar: Fully showing nav bar..... */
 
 @media (min-width: 1330px) {
